[ADD] /job antispam, you can now only change job every 60 seconds
[ADD] Effects with money and health on the HUD
[ADD] rp_tellall, put a message in everyone's screen(admin only)
[ADD] Effect when trying to touch an entity you can't touch.
[ADD] Compatability with mods that use PlayerSay(Like the ASS grammar plugin!
[FIX] Version number in the help screen
[FIX] Battering ram not working on warranted people
[FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
[FIX] People being able to spawn inside each other
[FIX] rp_max<custom team> erroring sometimes and breaking the whole fucking gamemode
[FIX] rp_grant breaking when the console enters it
[FIX] Atefood icon showing for everyone
[FIX] Prop protection toggle not working
[FIX] Normalsalary being stored twice.
[FIX] /teamban not working
[FIX] RP_max<customteam>s unable to be set to 0
[FIX] Unable to drop custom shipment weapons
[FIX] Zombie move code(Thanks Enjia2000)
[FIX] Enhanced "players don't spawn in each other" code
[FIX] Zombies spawning in each other using the "players don't spawn in each other" code (a bit thanks to Enjia2000)
[FIX] Settings and globals not loading
[FIX] prop protection assigning all world props to the owner of the server(in case of a listen server)
[FIX] Medkit now heals to someone's max health(determined on spawn)
[FIX] Exploit: Be cop, go to sleep, change to citizen, keep arrest baton and other weapons.
[FIX] Exploit where you could duplicate food
[FIX] Zombiemod does not only spawn zombies anymore(FIX because it was there but not enabled... Idk why)
[FIX] Exploit where you could spawn banned props
[FIX] If rp_allowrpnames = 0 then people won't have rp names anymore.
[FIX] Health is not restored when you come back from sleep
[FIX] HUGE Speed fix!(something with help labels sending from server to client every time)
[FIX] F4 admin menu having to load a few seconds
[FIX] F4 admin menu being unstable
[FIX] F1 menu not showing part of the help.